force-app/main/default/objects/Hospital__c/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <externalId>true</externalId>
    <label>externalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>