force-app/main/default/objects/Hospital__c/fields/FailRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>FailRequestNumber__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>FailRequestNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>