force-app/main/default/objects/Hospital__c/fields/hospitalIdParametr__c.field-meta.xml
<CustomField>
    <fullName>hospitalIdParametr__c</fullName>
    <externalId>true</externalId>
    <label>hospitalIdParametr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>