force-app/main/default/objects/Hospital__c/fields/TriggerProcess__c.field-meta.xml
<CustomField>
    <fullName>TriggerProcess__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TriggerProcess</label>
    <type>Checkbox</type>
</CustomField>